Fix for bug #29409 (Segfault in PHP functions called from XSLT). (by Rob)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@164535 c90b9560-bf6c-de11-be94-00142212c4b1